find_package(Doxygen OPTIONAL_COMPONENTS dot)
set(Req_Doxygen_Docs "1.8.13")

if (${DOXYGEN_VERSION} VERSION_LESS ${Req_Doxygen_Docs})
message(SEND_ERROR "Doxygen version found ${DOXYGEN_VERSION} (${DOXYGEN_EXECUTABLE}), but internal-docs requires ${Req_Doxygen_Docs} or higher")
set(ENABLE_BUILD_DOXYGEN OFF)
endif()

if (${DOXYGEN_FOUND})
  # Extract options
  set(DOXYGEN_DOXYFILE_ENCODING       UTF-8)
  set(DOXYGEN_PROJECT_NAME            "pFUnit")
  set(DOXYGEN_OUTPUT_DIRECTORY        documentation)
  set(DOXYGEN_CREATE_SUBDIRS          NO)
  set(DOXYGEN_OUTPUT_LANGUAGE         English)
  set(DOXYGEN_BRIEF_MEMBER_DESC       YES)
  set(DOXYGEN_REPEAT_BRIEF            YES)
  set(DOXYGEN_ALWAYS_DETAILED_SEC     NO)
  set(DOXYGEN_INLINE_INHERITED_MEMB   NO)
  set(DOXYGEN_FULL_PATH_NAMES         YES)
  set(DOXYGEN_FULL_PATH_NAMES         NO)
  set(DOXYGEN_SHORT_NAMES             NO)
  set(DOXYGEN_JAVADOC_AUTOBRIEF       NO)
  set(DOXYGEN_QT_AUTOBRIEF            NO)
  set(DOXYGEN_MULTILINE_CPP_IS_BRIEF  NO)
  set(DOXYGEN_INHERIT_DOCS            YES)
  set(DOXYGEN_SEPARATE_MEMBER_PAGES   NO)
  set(DOXYGEN_TAB_SIZE                4)
  set(DOXYGEN_OPTIMIZE_OUTPUT_FOR_C   NO)
  set(DOXYGEN_OPTIMIZE_OUTPUT_JAVA    NO)
  set(DOXYGEN_OPTIMIZE_FOR_FORTRAN    YES)
  set(DOXYGEN_OPTIMIZE_OUTPUT_VHDL    NO)
  set(DOXYGEN_EXTENSION_MAPPING       F90=Fortran F=Fortran pf=Fortran)
  set(DOXYGEN_MARKDOWN_SUPPORT        YES)
  set(DOXYGEN_AUTOLINK_SUPPORT        YES)
  set(DOXYGEN_BUILTIN_STL_SUPPORT     NO)
  set(DOXYGEN_CPP_CLI_SUPPORT         NO)
  set(DOXYGEN_SIP_SUPPORT             NO)
  set(DOXYGEN_IDL_PROPERTY_SUPPORT    YES)
  set(DOXYGEN_DISTRIBUTE_GROUP_DOC    NO)
  set(DOXYGEN_SUBGROUPING             YES)
  set(DOXYGEN_INLINE_GROUPED_CLASSES  NO)
  set(DOXYGEN_INLINE_SIMPLE_STRUCTS   NO)
  set(DOXYGEN_TYPEDEF_HIDES_STRUCT    NO)
  set(DOXYGEN_EXTRACT_ALL             NO)
  set(DOXYGEN_EXTRACT_PRIVATE         NO)
  set(DOXYGEN_EXTRACT_PACKAGE         NO)
  set(DOXYGEN_EXTRACT_STATIC          NO)
  set(DOXYGEN_EXTRACT_LOCAL_CLASSES   YES)
  set(DOXYGEN_EXTRACT_LOCAL_METHODS   NO)
  set(DOXYGEN_EXTRACT_ANON_NSPACES    NO)
  set(DOXYGEN_HIDE_UNDOC_MEMBERS      NO)
  set(DOXYGEN_HIDE_UNDOC_CLASSES      NO)
  set(DOXYGEN_HIDE_FRIEND_COMPOUNDS   NO)
  set(DOXYGEN_HIDE_IN_BODY_DOCS       NO)
  set(DOXYGEN_INTERNAL_DOCS           NO)
  set(DOXYGEN_CASE_SENSE_NAMES        YES)
  set(DOXYGEN_HIDE_SCOPE_NAMES        NO)
  set(DOXYGEN_SHOW_INCLUDE_FILES      YES)
  set(DOXYGEN_FORCE_LOCAL_INCLUDES    NO)
  set(DOXYGEN_INLINE_INFO             YES)
  set(DOXYGEN_SORT_MEMBER_DOCS        YES)
  set(DOXYGEN_SORT_BRIEF_DOCS         NO)
  set(DOXYGEN_ST  NO)
  set(DOXYGEN_SORT_GROUP_NAMES        NO)
  set(DOXYGEN_SORT_BY_SCOPE_NAME      NO)
  set(DOXYGEN_STRICT_PROTO_MATCHING   NO)
  set(DOXYGEN_GENERATE_TODOLIST       YES)
  set(DOXYGEN_GENERATE_TESTLIST       YES)
  set(DOXYGEN_GENERATE_BUGLIST        YES)
  set(DOXYGEN_GENERATE_DEPRECATEDLIST YES)
  set(DOXYGEN_MAX_INITIALIZER_LINES   30)
  set(DOXYGEN_SHOW_USED_FILES         YES)
  set(DOXYGEN_SHOW_FILES              YES)
  set(DOXYGEN_SHOW_NAMESPACES         YES)
  set(DOXYGEN_QUIET                   NO)
  set(DOXYGEN_WARNINGS                YES)
  set(DOXYGEN_WARN_IF_UNDOCUMENTED    YES)
  set(DOXYGEN_WARN_IF_DOC_ERROR       YES)
  set(DOXYGEN_WARN_NO_PARAMDOC        NO)
  set(DOXYGEN_WARN_FORMAT             "$file:$line: $text")
  set(DOXYGEN_INPUT_ENCODING          UTF-8)
  set(DOXYGEN_FILE_PATTERNS           *.py *.f90 *.f *.F90 *.F *.pf *.dox)
  set(DOXYGEN_RECURSIVE               YES)
  set(DOXYGEN_EXCLUDE_SYMLINKS        NO)
  set(DOXYGEN_EXAMPLE_RECURSIVE       NO)
  set(DOXYGEN_IMAGE_PATH              documentation/images)
  set(DOXYGEN_FILTER_SOURCE_FILES     NO)
  set(DOXYGEN_SOURCE_BROWSER          NO)
  set(DOXYGEN_INLINE_SOURCES          NO)
  set(DOXYGEN_STRIP_CODE_COMMENTS     YES)
  set(DOXYGEN_REFERENCED_BY_RELATION  NO)
  set(DOXYGEN_REFERENCES_RELATION     NO)
  set(DOXYGEN_REFERENCES_LINK_SOURCE  YES)
  set(DOXYGEN_SOURCE_TOOLTIPS         YES)
  set(DOXYGEN_USE_HTAGS               NO)
  set(DOXYGEN_VERBATIM_HEADERS        YES)
  set(DOXYGEN_ALPHABETICAL_INDEX      YES)
  set(DOXYGEN_GENERATE_HTML           YES)
  set(DOXYGEN_HTML_OUTPUT             html)
  set(DOXYGEN_HTML_FILE_EXTENSION     .html)
  set(DOXYGEN_HTML_COLORSTYLE_HUE     220)
  set(HTML_COLORSTYLE_SAT             100)
  set(HTML_COLORSTYLE_GAMMA           80)
  set(DOXYGEN_HTML_TIMESTAMP          YES)
  set(DOXYGEN_HTML_DYNAMIC_SECTIONS   NO)
  set(DOXYGEN_HTML_INDEX_NUM_ENTRIES  100)
  set(DOXYGEN_GENERATE_DOCSET         NO)
  set(DOXYGEN_DOCSET_FEEDNAME        "Doxygen generated docs")
  set(DOXYGEN_DOCSET_BUNDLE_ID        org.doxygen.Project)
  set(DOXYGEN_DOCSET_PUBLISHER_ID     org.doxygen.Publisher)
  set(DOXYGEN_DOCSET_PUBLISHER_NAME   Publisher)
  set(DOXYGEN_GENERATE_HTMLHELP       NO)
  set(DOXYGEN_GENERATE_CHI            NO)
  set(DOXYGEN_BINARY_TOC              NO)
  set(DOXYGEN_TOC_EXPAND              NO)
  set(DOXYGEN_GENERATE_QHP            NO)
  set(DOXYGEN_QHP_NAMESPACE           org.doxygen.Project)
  set(DOXYGEN_QHP_VIRTUAL_FOLDER      doc)
  set(DOXYGEN_GENERATE_ECLIPSEHELP    NO)
  set(DOXYGEN_ECLIPSE_DOC_ID          org.doxygen.Project)
  set(DOXYGEN_DISABLE_INDEX           NO)
  set(DOXYGEN_GENERATE_TREEVIEW       NO)
  set(DOXYGEN_ENUM_VALUES_PER_LINE    4)
  set(DOXYGEN_TREEVIEW_WIDTH          250)
  set(DOXYGEN_EXT_LINKS_IN_WINDOW     NO)
  set(DOXYGEN_FORMULA_FONTSIZE        10)
  set(DOXYGEN_FORMULA_TRANSPARENT     YES)
  set(DOXYGEN_USE_MATHJAX             NO)
  set(DOXYGEN_MATHJAX_FORMAT          HTML-CSS)
  set(DOXYGEN_MATHJAX_RELPATH         http://cdn.mathjax.org/mathjax/latest)
  set(DOXYGEN_MATHJAX_EXTENSIONS  TeX)
  set(DOXYGEN_SEARCHENGINE            YES)
  set(DOXYGEN_SERVER_BASED_SEARCH     NO)
  set(DOXYGEN_EXTERNAL_SEARCH         NO)
  set(DOXYGEN_SEARCHDATA_FILE         searchdata.xml)
  set(DOXYGEN_EXTRA_SEARCH_MAPPINGS  tagname)
  set(DOXYGEN_GENERATE_LATEX          YES)
  set(DOXYGEN_LATEX_OUTPUT            latex)
  set(DOXYGEN_LATEX_CMD_NAME          latex)
  set(DOXYGEN_MAKEINDEX_CMD_NAME      makeindex)
  set(DOXYGEN_COMPACT_LATEX           NO)
  set(DOXYGEN_PAPER_TYPE              letter)
  set(DOXYGEN_PDF_HYPERLINKS          YES)
  set(DOXYGEN_USE_PDFLATEX            YES)
  set(DOXYGEN_LATEX_BATCHMODE         NO)
  set(DOXYGEN_LATEX_HIDE_INDICES      NO)
  set(DOXYGEN_LATEX_SOURCE_CODE       NO)
  set(DOXYGEN_LATEX_BIB_STYLE         plain)
  set(DOXYGEN_GENERATE_RTF            NO)
  set(DOXYGEN_RTF_OUTPUT              rtf)
  set(DOXYGEN_COMPACT_RTF             NO)
  set(DOXYGEN_RTF_HYPERLINKS          NO)
  set(DOXYGEN_GENERATE_MAN            NO)
  set(DOXYGEN_MAN_OUTPUT              man)
  set(DOXYGEN_MAN_EXTENSION           .3)
  set(DOXYGEN_MAN_LINKS               NO)
  set(DOXYGEN_GENERATE_XML            NO)
  set(DOXYGEN_XML_OUTPUT              xml)
  set(DOXYGEN_XML_PROGRAMLISTING      YES)
  set(DOXYGEN_GENERATE_DOCBOOK        NO)
  set(DOXYGEN_DOCBOOK_OUTPUT          docbook)
  set(DOXYGEN_GENERATE_AUTOGEN_DEF    NO)
  set(DOXYGEN_GENERATE_PERLMOD        NO)
  set(DOXYGEN_PERLMOD_LATEX           NO)
  set(DOXYGEN_PERLMOD_PRETTY          YES)
  set(DOXYGEN_ENABLE_PREPROCESSING    YES)
  set(DOXYGEN_MACRO_EXPANSION         NO)
  set(DOXYGEN_EXPAND_ONLY_PREDEF      NO)
  set(DOXYGEN_SEARCH_INCLUDES         YES)
  set(DOXYGEN_the  operator)
  set(DOXYGEN_SKIP_FUNCTION_MACROS    YES)
  set(DOXYGEN_TAGFILES  file)
  set(DOXYGEN_TAGFILES  file)
  set(DOXYGEN_ALLEXTERNALS            NO)
  set(DOXYGEN_EXTERNAL_GROUPS         YES)
  set(DOXYGEN_EXTERNAL_PAGES          YES)
  set(DOXYGEN_PERL_PATH               /usr/bin/perl)
  set(DOXYGEN_CLASS_DIAGRAMS          YES)
  set(DOXYGEN_HIDE_UNDOC_RELATIONS    YES)
  set(DOXYGEN_HAVE_DOT                NO)
  set(DOXYGEN_DOT_FONTNAME            Helvetica)
  set(DOXYGEN_DOT_FONTSIZE            10)
  set(DOXYGEN_CLASS_GRAPH             YES)
  set(DOXYGEN_COLLABORATION_GRAPH     YES)
  set(DOXYGEN_GROUP_GRAPHS            YES)
  set(DOXYGEN_UML_LOOK                NO)
  set(DOXYGEN_UML_LIMIT_NUM_FIELDS    10)
  set(DOXYGEN_TEMPLATE_RELATIONS      NO)
  set(DOXYGEN_INCLUDE_GRAPH           YES)
  set(DOXYGEN_INCLUDED_BY_GRAPH       YES)
  set(DOXYGEN_CALL_GRAPH              NO)
  set(DOXYGEN_CALLER_GRAPH            NO)
  set(DOXYGEN_GRAPHICAL_HIERARCHY     YES)
  set(DOXYGEN_DIRECTORY_GRAPH         YES)
  set(DOXYGEN_DOT_IMAGE_FORMAT        png)
  set(DOXYGEN_INTERACTIVE_SVG         NO)
  set(DOXYGEN_DOT_GRAPH_MAX_NODES     50)
  set(DOXYGEN_MAX_DOT_GRAPH_DEPTH     0)
  set(DOXYGEN_DOT_TRANSPARENT         NO)
  set(DOXYGEN_DOT_MULTI_TARGETS       NO)
  set(DOXYGEN_GENERATE_LEGEND         YES)
  set(DOXYGEN_DOT_CLEANUP             YES)
  # HEADINGS, need to modify these things
  set(DOXYGEN_STRIP_FROM_PATH       ${CMAKE_SOURCE_DIR})

  else ()
  message(WARNING "Doxygen not found. To enable auto-generation of API documenation install Doxygen ")
endif ()

if (ENABLE_BUILD_DOXYGEN)
doxygen_add_docs(docs-internal
  "${CMAKE_SOURCE_DIR}/bin"
  "${CMAKE_SOURCE_DIR}/documentation"
  "${CMAKE_SOURCE_DIR}/Examples"
  "${CMAKE_SOURCE_DIR}/src"
  "${CMAKE_SOURCE_DIR}/include"
  "${CMAKE_SOURCE_DIR}/tests"
  COMMENT "Generate pFUnit Fortran documentation"
  )
endif()
